# Optix-Attempt

./: CMakeLists.txt  README.md
Renderer/: CMakeLists.txt  CUDABuffer.h  LaunchParams.h  Model.cpp  Model.h  SampleRenderer.cpp  SampleRenderer.h  devicePrograms.slang  main.cpp  optix7.h
